terraform-hakathon-vpc/main.tf
resource "aws_vpc" "main" {
  cidr_block = "172.1.0.0/16"
    tags = {
        Name = "my_vpc"
    }
}
resource "aws_subnet" "public_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "172.1.1.0/24"
  availability_zone = "ap-south-1a"
    tags = {
        Name = "public-subnet-1"
    }
}
resource "aws_subnet" "public_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "172.1.2.0/24"
  availability_zone = "ap-south-1b"
    tags = {
        Name = "public-subnet-2"
    }
}
resource "aws_subnet" "private_1" {
    vpc_id            = aws_vpc.main.id
    cidr_block        = "172.1.3.0/24"
    availability_zone = "ap-south-1a"
    tags = {
        Name = "private-subnet-1"
    }
  
}
resource "aws_subnet" "private_2" {
    vpc_id            = aws_vpc.main.id
    cidr_block        = "172.1.4.0/24"
    availability_zone = "ap-south-1b"   
    tags = {
        Name = "private-subnet-2"
    }
}
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
    tags = {
        Name = "my_igw"
    }
}
resource "aws_eip" "nat_eip" {
  domain = "vpc"
    tags = {
        Name = "nat-eip"
    }
}
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public_1.id
    tags = {
        Name = "my_nat_gateway"
    }
    depends_on = [ aws_internet_gateway.igw ]   
}
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
    
}
    tags = {
        Name = "public-route-table"
}
}
resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
}
    tags = {
        Name = "private-route-table"
}
}

resource "aws_route_table_association" "public_1_assoc" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public_rt.id
  
}
resource "aws_route_table_association" "public_2_assoc" {
  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.public_rt.id
  
}
resource "aws_route_table_association" "private_1_assoc" {
    subnet_id      = aws_subnet.private_1.id
    route_table_id = aws_route_table.private_rt.id
  
}
resource "aws_route_table_association" "private_2_assoc" {
    subnet_id      = aws_subnet.private_2.id
    route_table_id = aws_route_table.private_rt.id
  
}
